--- a/Academic_Report.tex
+++ b/Academic_Report.tex
@@ -53,7 +53,7 @@ headheight=20pt]{geometry}
 \renewcommand{\footrulewidth}{0.4pt}
 
 % Header configuration
-\fancyhead[C]{\textit{FractureAI – Advanced Bone Fracture Detection System}}
+\fancyhead[C]{\textit{ViT Fracture Model – Advanced Bone Fracture Detection System}}
 
 % Footer configuration
 \fancyfoot[L]{\textit{Department of Computer Engineering, Sandip University, Nashik}}
@@ -62,7 +62,7 @@ headheight=20pt]{geometry}
 % Ensure style applies to chapter pages as well
 \fancypagestyle{plain}{
   \fancyhf{}
-  \fancyhead[C]{\textit{FractureAI – Advanced Bone Fracture Detection System}}
+  \fancyhead[C]{\textit{ViT Fracture Model – Advanced Bone Fracture Detection System}}
   \fancyfoot[L]{\textit{Department of Computer Engineering, Sandip University, Nashik}}
   \fancyfoot[R]{\thepage}
   \renewcommand{\headrulewidth}{0.4pt}
@@ -94,7 +94,7 @@ headheight=20pt]{geometry}
 
 \vspace{0.4cm}
 
-{\Large \textbf{"FractureAI – Advanced Bone Fracture Detection System"}}
+{\Large \textbf{"ViT Fracture Model – Advanced Bone Fracture Detection System"}}
 
 \vspace{0.6cm}
 
@@ -155,7 +155,7 @@ This is to certify that the project report entitled
 
 \vspace{0.3cm}
 
-\textbf{"FractureAI – Advanced Bone Fracture Detection System"}
+\textbf{"ViT Fracture Model – Advanced Bone Fracture Detection System"}
 
 \vspace{0.3cm}
 
@@ -258,7 +258,7 @@ Finally, we express our heartfelt thanks to our \textbf{parents, friends, and cl
 
 \vspace{1cm}
 
-Bone fractures are a common clinical occurrence that requires rapid and accurate diagnosis to ensure effective treatment and prevent long-term disability. However, manual interpretation of radiographs is prone to human error, especially in high-pressure emergency environments. This report proposes \textbf{FractureAI}, an automated diagnostic system that utilizes Deep Learning, specifically Vision Transformers (ViT) and Convolutional Neural Networks (CNN), to detect fractures in X-ray images.
+Bone fractures are a common clinical occurrence that requires rapid and accurate diagnosis to ensure effective treatment and prevent long-term disability. However, manual interpretation of radiographs is prone to human error, especially in high-pressure emergency environments. This report proposes \textbf{ViT Fracture Model}, an automated diagnostic system that utilizes Deep Learning, specifically Vision Transformers (ViT) and Convolutional Neural Networks (CNN), to detect fractures in X-ray images.
 
 The system is developed using a multi-stack approach: a \textbf{React.js} frontend for a modern medical dashboard, a \textbf{Django REST API} for robust backend processing, and a hybrid AI model trained on the \textbf{MURA} and \textbf{Kaggle Bone Fracture} datasets. Data preprocessing techniques including Normalization and Data Augmentation are applied to improve model robustness. The proposed system achieves a classification accuracy of ~92\%, providing clinicians with high-confidence insights and automated medical reports. This project addresses the critical need for scalable, AI-driven diagnostic aids in modern radiology.
 
@@ -318,7 +318,7 @@ The system is developed using a multi-stack approach: a \textbf{React.js} fronte
 
 \section{Overview}
 
-FractureAI is an advanced deep learning platform designed to automate the process of bone fracture detection from X-ray imagery. In the current healthcare landscape, radiology departments often face a heavy influx of trauma cases, leading to potential delays. FractureAI serves as a "first-look" digital assistant that flags abnormal studies and provides visual interpretations to help clinicians prioritize urgent cases.
+ViT Fracture Model is an advanced deep learning platform designed to automate the process of bone fracture detection from X-ray imagery. In the current healthcare landscape, radiology departments often face a heavy influx of trauma cases, leading to potential delays. ViT Fracture Model serves as a "first-look" digital assistant that flags abnormal studies and provides visual interpretations to help clinicians prioritize urgent cases.
 
 The system is implemented as a web-based application using modern technologies such as React.js for the frontend, Django and Django REST Framework for the backend, and Python-based Artificial Intelligence models for fracture detection. The system captures medical images, processes them using AI algorithms, and provides high-accuracy diagnostic insights.
 
@@ -348,7 +348,7 @@ To overcome these limitations, an automated system is required that can accurate
 
 \section{Objectives of the Project}
 
-The main objectives of FractureAI are as follows:
+The main objectives of ViT Fracture Model are as follows:
 
 \begin{itemize}
 
@@ -388,7 +388,7 @@ The system is designed to:
 
 \section{Applications of the Project}
 
-FractureAI has several applications, including:
+ViT Fracture Model has several applications, including:
 
 \begin{itemize}
 
@@ -450,7 +450,7 @@ The system represents a significant improvement over traditional attendance syst
 
 A literature survey is an essential part of any project development process. It involves studying existing systems, research papers, technologies, and methodologies related to the proposed system. In the field of medical imaging, traditional methods such as manual interpretation by radiologists have been the gold standard. However, these methods are subject to human error and interpretation fatigue.
 
-With the advancement of Artificial Intelligence, specifically Deep Learning, automated systems have gained popularity due to their ability to process large volumes of data and identify subtle patterns. The FractureAI system is developed based on the concepts of Convolutional Neural Networks (CNNs) and Vision Transformers (ViTs) to provide an automated diagnostic aid.
+With the advancement of Artificial Intelligence, specifically Deep Learning, automated systems have gained popularity due to their ability to process large volumes of data and identify subtle patterns. The ViT Fracture Model system is developed based on the concepts of Convolutional Neural Networks (CNNs) and Vision Transformers (ViTs) to provide an automated diagnostic aid.
 
 \vspace{0.5cm}
 
@@ -518,7 +518,7 @@ Proposed System & Yes & Very High & Yes \\
 
 \section{Motivation for the Proposed System}
 
-The motivation for FractureAI stems from the critical need for rapid, accurate, and scalable diagnostic support in radiology. By leveraging the latest advancements in Vision Transformers and modern web frameworks, our proposed system aims to bridge the gap between medical data volume and specialist availability.
+The motivation for ViT Fracture Model stems from the critical need for rapid, accurate, and scalable diagnostic support in radiology. By leveraging the latest advancements in Vision Transformers and modern web frameworks, our proposed system aims to bridge the gap between medical data volume and specialist availability.
 
 \vspace{0.5cm}
 
@@ -544,13 +544,13 @@ The proposed system improves upon existing systems by providing a fully automate
 
 \section{Introduction}
 
-The proposed system, titled \textbf{FractureAI}, is an automated diagnostic system designed to detect bone fractures from X-ray imagery using a hybrid architecture of Vision Transformers (ViT) and Convolutional Neural Networks (CNN). The system utilizes a React.js frontend for visualization and a Django REST API for backend processing and model inference.
+The proposed system, titled \textbf{ViT Fracture Model}, is an automated diagnostic system designed to detect bone fractures from X-ray imagery using a hybrid architecture of Vision Transformers (ViT) and Convolutional Neural Networks (CNN). The system utilizes a React.js frontend for visualization and a Django REST API for backend processing and model inference.
 
 \vspace{0.5cm}
 
 \section{System Architecture}
 
-The FractureAI architecture is layered as follows:
+The ViT Fracture Model architecture is layered as follows:
 
 \begin{itemize}
 
@@ -601,7 +601,7 @@ To improve model robustness and convergence, the following preprocessing steps a
 
 \section{Model Architecture}
 
-FractureAI utilizes a \textbf{Vision Transformer (ViT-16)} architecture:
+ViT Fracture Model utilizes a \textbf{Vision Transformer (ViT-16)} architecture:
 
 \begin{itemize}
 
@@ -637,7 +637,7 @@ FractureAI utilizes a \textbf{Vision Transformer (ViT-16)} architecture:
 
 \section{Advantages of Proposed System}
 
-The proposed FractureAI system provides several diagnostic advantages:
+The proposed ViT Fracture Model system provides several diagnostic advantages:
 
 \begin{itemize}
 
@@ -1651,7 +1651,7 @@ The Smart AI Group Presentation and Attendance System was successfully implement
 
 \section{Introduction}
 
-This chapter presents the performance analysis and results obtained after training and evaluating the \textbf{FractureAI} system. The model was evaluated using standard metrics in medical imaging classification, including Accuracy, Precision, Recall, and F1-Score.
+This chapter presents the performance analysis and results obtained after training and evaluating the \textbf{ViT Fracture Model} system. The model was evaluated using standard metrics in medical imaging classification, including Accuracy, Precision, Recall, and F1-Score.
 
 The results demonstrate that the hybrid Vision Transformer model provides high sensitivity for identifying fractures, making it a reliable diagnostic aid for clinicians.
 
@@ -1895,7 +1895,7 @@ The system meets all project objectives and provides a complete solution for att
 
 \section{Conclusion}
 
-The \textbf{FractureAI} system Phase I has successfully demonstrated that combining modern web technologies (React and Django) with advanced Deep Learning architectures (Vision Transformers) can create a reliable diagnostic tool for bone fracture detection. The system effectively classifies common bone fractures with over 92\% accuracy and provides a streamlined, secure workflow for medical professionals.
+The \textbf{ViT Fracture Model} system Phase I has successfully demonstrated that combining modern web technologies (React and Django) with advanced Deep Learning architectures (Vision Transformers) can create a reliable diagnostic tool for bone fracture detection. The system effectively classifies common bone fractures with over 92\% accuracy and provides a streamlined, secure workflow for medical professionals.
 
 The project successfully addressed the limitations of manual interpretation, such as human error and turnaround delays, by providing a high-sensitivity "first-look" digital assistant. The implementation results show that the model converges well and maintains a high recall rate, which is the most critical metric for ensuring patient safety in emergency radiology.
 
@@ -1955,7 +1955,7 @@ These limitations can be improved in future versions.
 
 \section{Future Scope}
 
-The FractureAI system can be further expanded and improved across several dimensions to enhance its clinical utility and enterprise readiness:
+The ViT Fracture Model system can be further expanded and improved across several dimensions to enhance its clinical utility and enterprise readiness:
 
 \begin{itemize}
 
@@ -1977,7 +1977,7 @@ The system can also be used in other organizations such as companies and trainin
 
 \section{Final Conclusion}
 
-The FractureAI system provides a complete automated solution for medical image analysis using specialized Deep Learning models and modern web technologies. The system improves diagnostic efficiency, reduces specialized workload, and provides a robust platform for future medical AI integration.
+The ViT Fracture Model system provides a complete automated solution for medical image analysis using specialized Deep Learning models and modern web technologies. The system improves diagnostic efficiency, reduces specialized workload, and provides a robust platform for future medical AI integration.
 
 The system is reliable, high-performing, and poised to significantly improve outcomes in emergency triage and radiological departments.
 
